Add generic API schema structs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,8 @@
     "samber",
     "TSURL",
     "xuri"
-  ]
+  ],
+  "material-icon-theme.folders.associations": {
+    "endpoint": "api"
+  }
 }
