--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "packageManager": "pnpm@10.11.0",
   "devDependencies": {
     "@types/axios": "^0.14.4",
-    "axios": "^1.13.4"
+    "axios": "^1.13.4",
+    "prettier": "^3.8.1"
   }
 }
