--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "strict": true,
     "noEmit": true,
     "skipLibCheck": true,
-    "types": []
+    "types": [
+      "./global.d.ts"
+    ]
   },
   "include": [".generated/schema/**/*.ts"]
 }
